--- a/Three-Column-Layout.html
+++ b/Three-Column-Layout.html
@@ -44,6 +44,9 @@
 
 
         /* 方式3：BFC方式 */
+        #container2 {
+            overflow: hidden;
+        }
         .three-col-left3 {
             float: left;
             width: 100px;
